Add initial files

--- a/localization/english/bzn_l_english.yml
+++ b/localization/english/bzn_l_english.yml
@@ -1,4 +1,33 @@
 ﻿l_english:
+#Muslims
+culture_parameter_unlock_maa_mamluk_cavalry: "Can recruit [GetMaA('mamluk_cavalry').GetName] as [men_at_arms|E]"
+mamluk_cavalry: "Mamluk Cavalry"
+mamluk_cavalry_flavor: "Trained from youth in the art of war, these elite horsemen are the pride of any army. Loyal, disciplined, and deadly, the Mamluk Cavalry thunder across the battlefield with unmatched precision and resolve."
+trait_mamluk: "Mamluk"
+mamluk_desc: "This character is a member of the elite Mamluk warrior caste. Trained from youth in the arts of war and unwavering in their loyalty to their liege, Mamluks are formidable commanders and protectors. However, their devotion ends with their master's death, and they will not bow to another without question."
+mamluk: "Mamluk"
+muslim_event.0001.t:0 "The Mamluk's Loyalty Ends"
+muslim_event.0001.d:0 "Your death marked the end of a sacred bond. Among your most trusted warriors, a Mamluk now refuses to bow to your heir. With unwavering confidence and martial backing, he moves to claim the court for himself."
+muslim_event.0001.a:0 "The Mamluk seizes power!"
+muslim_event.0001.b:0 "Buy his loyalty — for now."
+muslim_event.0002.t:0 "A Mamluk Joins Your Court"
+muslim_event.0002.desc:0 "A battle-hardened Mamluk warrior has arrived at your court. Trained in loyalty and war, he offers his sword in your service — a fearsome asset for your armies and a potential threat should your rule falter."
+bzn_invite_mamluk_decision: "Invite a Mamluk to Court"
+bzn_invite_mamluk_decision_desc: "Send word across distant lands to summon a distinguished Mamluk warrior to your service. Fiercely loyal and highly trained, such a man will bolster your court’s strength and serve as a fearsome commander."
+bzn_invite_mamluk_decision_tooltip: "A Mamluk with strong prowess and martial skill will arrive at your court in a few days."
+bzn_invite_mamluk_decision_confirm: "Summon a Mamluk warrior"
+ bzn_invite_mamluk_effect_tooltip: "A skilled Mamluk warrior will arrive at your court within a few days, ready to serve as a commander or bodyguard."
+bzn_manage_harem_decision: "Manage the Harem"
+bzn_manage_harem_decision_desc: "Spend time overseeing the care and harmony of your harem. This attention improves the loyalty of your concubines and hones your political instincts."
+bzn_manage_harem_decision_tooltip: "Gain opinion with each of your concubines and receive lifestyle experience in a random category."
+bzn_manage_harem_decision_confirm: "Summon the concubines and begin."
+managed_harem_opinion: "Personally Attended by Liege"
+tradition_diwan_intrigue_name: "Diwan Intrigue"
+tradition_diwan_intrigue_desc: "A refined court culture of secrets, loyalty, and subtle power. While polygamy is not practiced, this tradition permits the ruler to keep multiple concubines in a well-managed harem. Eunuchs play a key role in court affairs, and a dedicated Chief Eunuch oversees harmony and influence behind the scenes."
+tradition_mamluk_elite_name: "Mamluk Elite"
+tradition_mamluk_elite_desc: "This culture reveres the warrior-slave legacy of the Mamluks. Trained from youth in horsemanship and combat, these elite warriors are fiercely loyal to their liege—but only while they live. Attracting powerful martial wanderers and inspiring ambition, Mamluks can be both an asset and a threat."
+
+
 #My Traits
 trait_zadruga_leader:0 "Zadruga Leader"
 zadruga_leader_desc:0 "The elected head of a traditional Balkan communal family, guiding their people with wisdom and resolve."
@@ -88,6 +117,37 @@ trait_painter_desc:0 "This character has an excellent skill of drawing. This per
  bzn_whisper_to_void_desc:0 "The stars tremble and the veil thins. Whispers beckon from beyond comprehension. Should you answer, you may become something... more."
   bzn_whisper_to_void_tooltip:0 "You will embrace the whispers of the Void and transcend your mortal understanding."
  bzn_whisper_to_void_confirm:0 "Whisper to the Void"
+
+ bzn_classics:0 "Delve into Classics"
+ bzn_classics_desc:0 "Your studies have led you deep into the philosophies and religions of antiquity. The texts of Plato, the rites of Eleusis, and the legends of Olympus stir something ancient within you. Perhaps it is time to embrace the old ways once more..."
+ bzn_classics_confirm:0 "Embrace the Old Ways"
+ bzn_classics_tooltip:0 "Embrace the Old Ways"
+ 
+bzn_adopt_confederate_tribal_decision: "Adopt Confederate Tribal Government"
+bzn_adopt_confederate_tribal_decision_desc: "The old ways no longer serve the needs of our people. By adopting a Confederate Tribal government, we shall empower our clans to act in unity under a common banner while preserving their autonomy. This new structure will bring strength, flexibility, and cohesion to our realm."
+bzn_adopt_confederate_tribal_decision_confirm: "Adopt Confederate Tribal Government"
+bzn_adopt_confederate_tribal_decision_tooltip: "Adopt Confederate Tribal Government"
+
+ bzn_borrow_jews:0 "Borrow money from the Jews"
+ bzn_borrow_jews_desc:0 "In times of need, the Jewish community can be a source of financial aid. By securing a loan, you may bolster your prestige and ensure your realm’s future — though not without raising a few eyebrows."
+ bzn_borrow_jews_confirm:0 "Borrow money from the Jews"
+ bzn_borrow_jews_tooltip:0 "Borrow money from the Jews"
+ bzn_repay_jews:0 "Repay the Jewish Loan"
+ bzn_repay_jews_desc:0 "The time has come to repay the money you borrowed from the Jewish community. Though costly, fulfilling your promise will restore your honor and the trust of your subjects."
+ bzn_repay_jews_confirm:0 "Repay the Loan"
+ bzn_repay_jews_tooltip:0 "Repay the Jewish Loan"
+ bzn_expel_jews:0 "Expel the Jews"
+ bzn_expel_jews_desc:0 "Instead of repaying the loan, you could choose to expel the Jewish community from your realm. While this would erase your debts, it would also spark controversy and harm your reputation."
+ bzn_expel_jews_confirm:0 "Expel the Jews"
+ bzn_expel_jews_tooltip:0 "Cancel your debt without paying."
+ bzn_welcome_jews:0 "Welcome Back the Jews"
+ bzn_welcome_jews_desc:0 "After years of exile, the Jewish community may once again be allowed to return and settle within your lands. Though some courtiers may protest, restoring their presence promises economic revitalization and a gesture of clemency."
+ bzn_welcome_jews_confirm:0 "Welcome the Jews"
+ bzn_welcome_jews_tooltip:0 "Welcome the Jews"
+ jews_expelled:0 "Jews Expelled"
+ jews_expelled_desc:0 "This character has expelled the Jewish population from their realm, weakening the economy and tarnishing their reputation among more tolerant peers."
+ indebted:0 "In Debt"
+ indebted_desc:0 "This character owes a significant financial debt, which weighs on their mind and their court's opinion."
 
 
 bzn_invite_hashishiyah_decision:0 "Summon a Hashishiyah"
@@ -338,12 +398,6 @@ tradition_marchfield_name:0 "Carolingian Legacy"
 tradition_marchfield_desc:0 "Following the legacy of the Frankish Marchfield, this culture gathers its warriors annually to deliberate matters of war and governance. Military service is a proud duty, and elite cavalry formations are at the heart of its martial tradition."
 tradition_bushido_name:0 "Bushido"
 tradition_bushido_desc:0 "Bushido, the feudal code of the Japanese samurai, stressing self-discipline, courage and loyalty."
-culture_parameter_unlock_maa_samurai:0 "Can recruit [GetMaA('Samurai').GetName] as [men_at_arms|E]"
-Samurai_name:0 "Samurai"
-Samurai_flavor:0 "Samurai are a highly trained warrior class in Japan who serve nobles in exchange for military service."
-culture_parameter_unlock_maa_hobelars:0 "Can recruit [GetMaA('Hobelars').GetName] as [men_at_arms|E]"
-hobelars_name:0 "Hobelars"
-hobelars_flavor:0 "Hobelars are swift and versatile light cavalry from Ireland, known for their mobility and effectiveness in skirmishes and raids."
 condottieri:0 "Condottieri"
 condottieri_flavor:0 "Rooted in the mercenary legacies of Medieval Italy, this culture glorifies the art of war for hire. Military leaders, known as Condottieri, command elite bands of soldiers, often switching allegiances for the right price—turning warfare into both a craft and a business."
 culture_parameter_unlock_maa_condottieri:0 "Can recruit [GetMaA('condottieri').GetName] as [men_at_arms|E]"
@@ -562,3 +616,5 @@ monastic_armored_horsemen_flavor: "Mounted zealots clad in steel, they charge in
 monastic_crossbowmen: "Monastic Crossbowmen"
 monastic_crossbowmen_flavor: "These monks have traded their rosaries for crossbows, bringing precision and piety to every bolt fired."
 
+english_billmen: "English Billmen"
+english_billmen_flavor: ""english_billmen_flavor: "Armed with long bills and fierce resolve, English Billmen formed the backbone of many medieval armies, cutting down foes with brutal efficiency."
