--- a/localization/english/culture/bzn_cultures_l_english.yml
+++ b/localization/english/culture/bzn_cultures_l_english.yml
@@ -20,7 +20,16 @@ tradition_servile_soldiers_name:0 "Slave Raiders"
   tradition_servile_soldiers_desc:0 "This culture sees warfare not only as conquest, but as a means to capture and enslave. Their armies include ranks of former slaves, now fighting under coercion or for survival, and their raids are feared for the devastation and mass enslavement they leave behind."
   culture_parameter_unlock_maa_servile_soldiers:0 "Can recruit [GetMaA('servile_soldiers').GetName] as [men_at_arms|E]"
   culture_parameter_slave_raid_cb_active:0 "Unlocks the Slave Raid [casus_bellis|E]"
-  
+  culture_parameter_unlock_maa_naginata: "Can recruit [GetMaA('naginata').GetName] as [men_at_arms|E]"
+  culture_parameter_unlock_maa_yumi: "Can recruit [GetMaA('yumi').GetName] as [men_at_arms|E]"
+  culture_parameter_unlock_maa_yari: "Can recruit [GetMaA('yari').GetName] as [men_at_arms|E]"
+  naginata: "Naginata"
+  naginata_flavor: "A polearm favored by warrior monks and noblewomen alike, the Naginata combines the reach of a spear with the slicing power of a sword — graceful, but deadly."
+  yumi: "Yumi"
+  yumi_flavor: "This asymmetrical longbow, crafted from laminated bamboo and wood, is a hallmark of the samurai archer — striking enemies from afar with elegance and precision."
+  yari: "Yari"
+  yari_flavor: "A straight-bladed spear renowned for its versatility in formation and single combat alike, the Yari is the backbone of disciplined samurai infantry."
+
 slave_raid_cb_victory_desc:0 "Characters and county inhabitants of [defender.GetShortUINamePossessive] realm are captured by [attacker.GetShortUIName]."
 slave_raid_cb_white_peace_desc:0 "No prisoners are taken."
 slave_raid_cb_defeat_desc:0 "No prisoners are taken."
