East Africa Flavor Pack

--- a/localization/english/bzn_l_english.yml
+++ b/localization/english/bzn_l_english.yml
@@ -1049,3 +1049,24 @@ qarmatian_religious_head_title_name: "Qarmatian Imamate"
  lifidi_cavalry_flavor: ""
  
  e_lower_niger: "Lower Niger"
+ Zayidi_religious_head_title: "Caliph"
+ 
+building_type_bzn_coffee_plantation_01:0 "Coffee Plantation"
+building_type_bzn_coffee_plantation_01_desc:1 "Fertile lands and a favorable climate allow for the cultivation of coffee shrubs. What begins as small family plots may grow into a thriving center of production and trade."
+building_bzn_coffee_plantation_01:1 "Local Coffee Groves"
+building_bzn_coffee_plantation_01_desc:1 "Small groves of coffee shrubs are tended by local farmers. Though modest in scale, the harvest already attracts traders seeking the fragrant beans."
+building_bzn_coffee_plantation_02:1 "Expanding Coffee Estate"
+building_bzn_coffee_plantation_02_desc:1 "With growing demand, the groves expand into organized estates. Irrigation channels and storage houses improve both yield and quality."
+building_bzn_coffee_plantation_03:1 "Grand Coffee Plantation"
+building_bzn_coffee_plantation_03_desc:1 "Vast fields of coffee shrubs now dominate the countryside. Skilled laborers oversee harvesting and drying, ensuring a steady supply for domestic use and export."
+building_bzn_coffee_plantation_04:1 "Imperial Coffee Complex"
+building_bzn_coffee_plantation_04_desc:1 "Processing houses, roasting facilities, and merchant quarters surround the plantations. The region’s coffee is prized across distant markets, bringing wealth and prestige to its ruler."
+
+bzn_invest_coffee: "Invest in Coffee Cultivation"
+bzn_invest_coffee_desc: "The highlands of Yemen produce a rare and invigorating bean, increasingly sought after by merchants and travelers alike. By investing in its cultivation and trade, we may secure both profit and prestige.\n\nWith careful oversight and capital, these plantations could flourish and enrich our realm."
+bzn_invest_coffee_confirm: "Let the plantations grow."
+bzn_invest_coffee_tooltip: "Invest gold into developing coffee cultivation, gaining Prestige and the [GetModifier('coffee_baron').GetName] modifier."
+
+coffee_baron: "Coffee Baron"
+coffee_baron_desc: "Through careful investment and oversight, this ruler has cultivated profitable coffee estates. Merchants flock to their lands, and the fragrant trade brings both wealth and prestige."
+custom_coffee: "Coffee Region"
